# rastertools

./: .gitignore  GETTING_STARTED.md  README.md  crs.py  generalutils.py  geobox.py  pyproject.toml  raster.py  requirements.txt  setup.py  utils.py
nb/: how-to-use-vrt-to-fetch-data.ipynb
resources/nb/: GETTING_STARTED.ipynb
src/rastertools/: __init__.py  convert.py  metadata.py  raster.py
src/rastertools_BOULDERING/: convert.py  crs.py  misc.py  raster.py
