[build-system]
requires = ["affine>=2.4.0",
            "geopandas>=0.13.2",
            "numpy>=1.24.3",
            "pandas>=2.0.2",
            "Pillow>=9.5.0",
            "pyproj>=3.6.0",
            "rasterio>=1.3.7",
            "setuptools>=58.1.0",
            "Shapely>=2.0.1",
            "tqdm>=4.65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rastertools_BOULDERING"
version = "0.0.5"
license = {file = "LICENSE.txt"}
authors = [
  { name="Nils C. Prieur", email="prieur.nils@gmail.com" },
]
description = "Rastertools is a package that gathers a collection of tools to manipulate and extract metadata from rasters."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yellowchocobo/rastertools"
"Bug Tracker" = "https://github.com/yellowchocobo/rastertools/issues"
